import { Request, Response, NextFunction } from 'express';
import Species from './species.model';
import { AppError } from '../../middlewares/error.middleware';


class speciesController {
  
}