classDiagram
direction TB

%% ==========================================
%% 1. MODELS / ENTITIES (UML: property: Type)
%% ==========================================

class User {
    %% --- Properties (Attributes) ---
    +_id: ObjectId
    +name: String
    +email: String
    +password: String
    +avatar: String
    +role: String
    +createdAt: Date
    +updatedAt: Date

    %% --- Methods (Operations) ---
    +comparePassword(candidatePassword: String): Boolean
    +generateAuthToken(): String
    +toSafeObject(): Object
}

class Species {
    %% --- Properties (Attributes) ---
    +_id: ObjectId
    +scientificName: String
    +commonName: String
    +family: String
    +genus: String
    +description: String
    +habitat: String
    +distribution: String
    +behavior: String
    +venomInfo: String
    +conservationStatus: String
    +imageUrls: Array~String~
    +createdAt: Date
    +updatedAt: Date

    %% --- Methods (Operations) ---
    +isVenomous(): Boolean
    +getPrimaryImage(): String
    +getSummary(): String
}

class Identification {
    %% --- Properties (Attributes) ---
    +_id: ObjectId
    +userId: ObjectId
    +imageUrl: String
    +status: String
    +uncertaintyLevel: String
    +createdAt: Date
    +updatedAt: Date

    %% --- Methods (Operations) ---
    +getTopPrediction(): Prediction
    +isConfirmed(): Boolean
    +addPrediction(prediction: Prediction): void
}

class Prediction {
    %% --- Properties (Attributes) ---
    +speciesId: ObjectId
    +scientificName: String
    +commonName: String
    +confidence: Number
    +rank: Number
    +confidenceBand: String

    %% --- Methods (Operations) ---
    +isHighConfidence(): Boolean
    +getConfidencePercentage(): String
}

class LearningTopic {
    %% --- Properties (Attributes) ---
    +_id: ObjectId
    +slug: String
    +title: String
    +content: String
    +category: String
    +sourceUrl: String
    +createdAt: Date
    +updatedAt: Date

    %% --- Methods (Operations) ---
    +getReadingTime(): Number
    +getSummary(): String
}

%% ==========================================
%% 2. CONTROLLERS (UML: property: Type)
%% ==========================================

class AuthController {
    %% --- Properties (Dependencies) ---
    -authService: AuthService

    %% --- Methods (API Handlers) ---
    +register(req: Request, res: Response, next: NextFunction): Promise
    +login(req: Request, res: Response, next: NextFunction): Promise
    +getAllUsers(req: Request, res: Response, next: NextFunction): Promise
}

class SpeciesController {
    %% --- Properties (Dependencies) ---
    -speciesModel: SpeciesModel

    %% --- Methods (API Handlers) ---
    +createSpecies(req: Request, res: Response, next: NextFunction): Promise
    +getAllSpecies(req: Request, res: Response, next: NextFunction): Promise
    +searchSpecies(req: Request, res: Response, next: NextFunction): Promise
    +getSpeciesById(req: Request, res: Response, next: NextFunction): Promise
    +updateSpecies(req: Request, res: Response, next: NextFunction): Promise
    +deleteSpecies(req: Request, res: Response, next: NextFunction): Promise
}

class IdentificationsController {
    %% --- Properties (Dependencies) ---
    -aiService: AIService
    -idModel: IdentificationModel

    %% --- Methods (API Handlers) ---
    +createIdentification(req: Request, res: Response, next: NextFunction): Promise
    +getAllIdentifications(req: Request, res: Response, next: NextFunction): Promise
    +getIdentificationById(req: Request, res: Response, next: NextFunction): Promise
}

class LearningController {
    %% --- Properties (Dependencies) ---
    -learningModel: LearningModel

    %% --- Methods (API Handlers) ---
    +getAllTopics(req: Request, res: Response, next: NextFunction): Promise
    +getTopicBySlug(req: Request, res: Response, next: NextFunction): Promise
    +createTopic(req: Request, res: Response, next: NextFunction): Promise
}

%% ==========================================
%% 3. RELATIONSHIPS
%% ==========================================

%% Model Relationships
User "1" --> "*" Identification : creates
Identification "1" *-- "*" Prediction : contains
Prediction "*" --> "1" Species : references

%% Controller to Model Dependencies
AuthController ..> User : manages
SpeciesController ..> Species : manages
IdentificationsController ..> Identification : processes
LearningController ..> LearningTopic : manages